# Kite

./: .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  LICENSE  PRIVACY.md  README.en.md  README.md  contract.md  devlog.md  eslint.config.js  findings.md  package.json  playwright.config.ts  pnpm-lock.yaml  progress.md  release-notes-v0.0.6.md  task_plan.md  tsconfig.base.json  turbo.json  功能���现状���报告.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.turbo/cache/: 41f2f4c75f6cce97-manifest.json  41f2f4c75f6cce97-meta.json  42b203273d20f70d-manifest.json  42b203273d20f70d-meta.json  458dfcd5d7a22923-manifest.json  458dfcd5d7a22923-meta.json  46655e04b4bc9083-manifest.json  46655e04b4bc9083-meta.json  46655e04b4bc9083.tar.zst  5e22465379832215-manifest.json  5e22465379832215-meta.json  72b9669c47e9a513-manifest.json  72b9669c47e9a513-meta.json  72b9669c47e9a513.tar.zst  813db7dd4802244c-manifest.json  (+29 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
apps/desktop/src-tauri/bindings/: InterceptedRequest.ts  KeyValue.ts
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: crypto_integration_test.rs  error.rs  lib.rs  main.rs  test_utils.rs  ts_export.rs
apps/desktop/src-tauri/src/ai/: local.rs  local_test.rs  mcp.rs  mcp_external.rs  mod.rs  provider.rs  provider_test.rs
apps/desktop/src-tauri/src/commands/: codegen.rs  codegen_test.rs  collection.rs  crypto.rs  environment.rs  environment_test.rs  file_ops.rs  grpc.rs  grpc_integration_test.rs  grpc_stub.rs  grpc_test.rs  history.rs  history_test.rs  http.rs  http_integration_tests.rs  importer.rs  mock.rs  mock_test.rs  mod.rs  mqtt.rs  mqtt_test.rs  oauth.rs  oauth_test.rs  script.rs  script_templates.rs  script_test.rs  sse.rs  sse_test.rs  websocket.rs  ws_message_test.rs
apps/desktop/src-tauri/src/plugin/: engine.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/proxy/: mod.rs
apps/desktop/src-tauri/src/script/: engine.rs  engine_test.rs  mod.rs
apps/desktop/src-tauri/src/storage/: file.rs  mod.rs
docs/: 01-整体规划.md  02-UI设计.md  03-功能设计.md  04-技术方案.md  04a-架构设计.md  04b-API设计.md  04c-安全与性能.md  05-UI操作流程.md  06-技术方案深度分析报告.md  07-核心页面视觉规范.md  07a-首页视觉规范.md  07b-请求编辑视觉规范.md  07c-侧边栏与命令面板视觉规范.md  08-开发指南.md  09-Phase1任务清单.md  10-Phase2任务清单.md  11-Phase3任务清单.md  12-状态持久化与变量同步策略.md  13-错误处理与用户反馈完整设计.md  14-Phase2b协议支持任务清单.md  14-环���变量���理界���设计.md  15-Phase4-AI模块任务清单.md  15-集���级配���设计.md  16-interface-contract.md  17-runtime-behavior.md  18-dev-progress.md  19-documentation-completion-summary.md  20-development-roadmap.md  21-集合���配置完整���计.md  23-集合与文件夹级配置设计.md  24-发布就绪度审计报告.md  25-发布就绪度审计报告-综合版.md  README.md  REMAINING_ISSUES.md  功能现状报告.md
scripts/: generate-cert.ps1  version-sync.mjs
(+127 files in other folders)
