[package]
name = "api-client"
version = "0.1.0"
description = "A modern, high-performance API client"
authors = ["API Client Team"]
edition = "2021"

[lib]
name = "api_client_lib"
crate-type = ["rlib"]

[build-dependencies]
 tauri-build = { version = "2", features = [] }

[dependencies]
 tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream", "cookies", "gzip", "brotli", "deflate", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["rt"] }
serde_urlencoded = "0.7"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rumqttc = "0.24"
tonic = "0.12"
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
bytes = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
 rquickjs = { version = "0.11", features = ["allocator", "macro"] }
chrono = "0.4"
argon2 = "0.5"
aes-gcm = "0.10"
keyring = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
